[package]
name = "pmre"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"
description="Procedural Macro for generating regex matchers"
license="MIT"
homepage="https://github.com/aDotInTheVoid/pmre"
repository="https://github.com/aDotInTheVoid/pmre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
