[package]
name = "pmre"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"
description="Procedural Macro for generating regex matchers"
license="MIT"
homepage="https://github.com/aDotInTheVoid/pmre"
repository="https://github.com/aDotInTheVoid/pmre"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn={version="1.0", features = ["full", "extra-traits"]}
regex-automata = "0.1.9"
lazy_static="1.4.0"
